Add css styling for content boxes

--- a/Scroll Animation/style.css
+++ b/Scroll Animation/style.css
@@ -1,3 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Roboto', 'sans-serif';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0;
+}
+
+h1 {
+    margin: 10px;
+}
+
+.box {
+    background-color: steelblue;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 400px;
+    height: 200px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
+    transform: translateX(400%); /* boxes are moved out of screen to the right before the animation */
+    transition: transform 0.4s ease;
+}
+
+.box:nth-of-type(even) {
+    transform: translateX(-400%); /* every other boxes are out of screen to the left */
+}
+
+.box.show {
+    transform: translateX(0); /* if box has class show, then set it to original position */
+}
+
+.box h2 {
+    font-size: 45px;
 }
