--- a/Scroll Animation/style.css
+++ b/Scroll Animation/style.css
@@ -11,6 +11,7 @@ body {
     align-items: center;
     flex-direction: column;
     margin: 0;
+    overflow-x: hidden; /* removes the horizontal scroll bar at the bottom */
 }
 
 h1 {
@@ -29,7 +30,7 @@ h1 {
     border-radius: 10px;
     box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
     transform: translateX(400%); /* boxes are moved out of screen to the right before the animation */
-    transition: transform 0.4s ease;
+    transition: transform 0.6s ease;
 }
 
 .box:nth-of-type(even) {
