--- a/Split Landing Page/style.css
+++ b/Split Landing Page/style.css
@@ -1,3 +1,102 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+:root {
+    --left-bg-color: rgba(87, 84, 236, 0.7); /* 0.7 is the alpha value for transparency */
+    --right-bg-color: rgba(43, 43, 43, 0.8);
+    --left-btn-hover-color: rgba(87, 84, 236, 1);
+    --right-btn-hover-color: rgba(28, 122, 28, 1);
+}
+
 * {
     box-sizing: border-box;
+}
+
+body {
+    font-family: Roboto;
+    margin: 0;
+    overflow: hidden;
+    height: 100vh;
+}
+
+h1 {
+    font-size: 4rem;
+    color: white;
+    position: absolute;
+    left: 50%; /* left 50% and translateX(-50%) to move the middle of h1 to the center */
+    transform: translateX(-50%);
+    top: 20%;
+    white-space: nowrap; /* no wrapping - ex. Playstation 5 in one line, not in two */
+}
+
+.container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: #333; /* dark gray background color */
+}
+
+.split {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+}
+
+.split.left {
+    left: 0;
+    background-image: url('images/ps.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* adds overlay to the left container: light blue background */
+.split.left::before {
+    content: '';
+    position: absolute;
+    width: 100%; /* width and height 100% of the left container */
+    height: 100%;
+    background-color: var(--left-bg-color);
+}
+
+.split.right {
+    right: 0;
+    background-image: url('images/xbox.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* adds overlay to the right container: light blue background */
+.split.right::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--right-bg-color);
+}
+
+.btn {
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    transform: translateX(-50%);
+    text-decoration: none; /* removes the underline of the hyperlink */
+    color: white;
+    border: white solid 0.2rem;
+    font-size: 1rem;
+    width: 15rem;
+    padding: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    text-transform: uppercase; /* makes text uppercase */
+}
+
+.split.left .btn:hover {
+    background-color: var(--left-btn-hover-color);
+    border-color: var(--left-btn-hover-color);
+}
+
+.split.right .btn:hover {
+    background-color: var(--right-btn-hover-color);
+    border-color: var(--right-btn-hover-color);
 }
