--- a/Split Landing Page/style.css
+++ b/Split Landing Page/style.css
@@ -5,6 +5,8 @@
     --right-bg-color: rgba(43, 43, 43, 0.8);
     --left-btn-hover-color: rgba(87, 84, 236, 1);
     --right-btn-hover-color: rgba(28, 122, 28, 1);
+    --hover-width: 75%;
+    --other-width: 25%;
 }
 
 * {
@@ -99,4 +101,20 @@ h1 {
 .split.right .btn:hover {
     background-color: var(--right-btn-hover-color);
     border-color: var(--right-btn-hover-color);
+}
+
+.hover-left .left {
+    width: var(--hover-width); /* left section has 75% width when active */
+}
+
+.hover-left .right {
+    width: var(--other-width); /* right section has 25% width when inactive */
+}
+
+.hover-right .left {
+    width: var(--other-width);
+}
+
+.hover-right .right {
+    width: var(--hover-width);
 }
