--- a/Split Landing Page/style.css
+++ b/Split Landing Page/style.css
@@ -5,8 +5,9 @@
     --right-bg-color: rgba(43, 43, 43, 0.8);
     --left-btn-hover-color: rgba(87, 84, 236, 1);
     --right-btn-hover-color: rgba(28, 122, 28, 1);
-    --hover-width: 75%;
-    --other-width: 25%;
+    --hover-width: 70%;
+    --other-width: 30%;
+    --speed: 800ms;
 }
 
 * {
@@ -41,6 +42,7 @@ h1 {
     position: absolute;
     width: 50%;
     height: 100%;
+    overflow: hidden;
 }
 
 .split.left {
@@ -48,6 +50,7 @@ h1 {
     background-image: url('images/ps.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 /* adds overlay to the left container: light blue background */
@@ -64,6 +67,7 @@ h1 {
     background-image: url('images/xbox.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 /* adds overlay to the right container: light blue background */
@@ -74,6 +78,11 @@ h1 {
     height: 100%;
     background-color: var(--right-bg-color);
 }
+
+.split.right, .split.left, .split.right::before, .split.left::before {
+    transition: all var(--speed) ease-in-out;
+}
+
 
 .btn {
     position: absolute;
@@ -117,4 +126,15 @@ h1 {
 
 .hover-right .right {
     width: var(--hover-width);
+}
+
+@media(max-width: 800px) {
+    h1 {
+        font-size: 2rem;
+    }
+
+    .btn {
+        padding: 1.2rem;
+        width: 12rem;
+    }
 }
