--- a/Form Wave Animation/style.css
+++ b/Form Wave Animation/style.css
@@ -72,12 +72,25 @@ body {
     color: white;
 }
 
-.form-control input:focus, .form-control input:valid {
+.form-control input:focus {
     outline: 0; /* no border when we click the input box */
+    border-bottom: 2px solid lightblue; /* bottom border color turns lightblue when you click the input box */
 }
 
 .form-control label {
     position: absolute; /* for the wave animation, each letter will have translateY upwards, with delay */
     top: 15px;
     left: 0;
+}
+
+.form-control label span {
+    display: inline-block;
+    font-size: 18px;
+    min-width: 5px;
+    transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.form-control input:focus + label span {
+    color: lightblue; /* when you focus the input box, Email and Password turns lightblue */
+    transform: translateY(-30px); /* negative value if you want it to go up, positive for down */
 }
