--- a/Form Wave Animation/style.css
+++ b/Form Wave Animation/style.css
@@ -67,30 +67,32 @@ body {
     border-bottom: 2px solid white;
     display: block; /* want the input and label to be on its own line (takes the entire width of form-control box */
     width: 100%;
-    padding: 15px;
+    padding: 15px 0;
     font-size: 18px;
     color: white;
 }
 
-.form-control input:focus {
+.form-control input:focus, .form-control input:valid {
     outline: 0; /* no border when we click the input box */
-    border-bottom: 2px solid lightblue; /* bottom border color turns lightblue when you click the input box */
+    border-bottom-color: lightblue; /* bottom border color turns lightblue when you click the input box */
 }
 
 .form-control label {
     position: absolute; /* for the wave animation, each letter will have translateY upwards, with delay */
     top: 15px;
     left: 0;
+    pointer-events: none;
 }
 
 .form-control label span {
     display: inline-block;
     font-size: 18px;
     min-width: 5px;
-    transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55); /* bounce effect */
 }
 
-.form-control input:focus + label span {
+.form-control input:focus + label span,
+.form-control input:valid + label span {
     color: lightblue; /* when you focus the input box, Email and Password turns lightblue */
     transform: translateY(-30px); /* negative value if you want it to go up, positive for down */
 }
