--- a/Image Slider/style.css
+++ b/Image Slider/style.css
@@ -9,6 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .slider {
@@ -29,7 +30,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0;
-    transition: opacity 0.2s;
+    transition: opacity 0.4s ease-in;
 }
 
 .slide.active {
@@ -99,6 +100,7 @@ body {
     border-radius: 50%;
     border: 4px solid #eee;
     background-color: transparent;
+    cursor: pointer;
 }
 
 .radio.active {
